--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  padding-bottom: 30px;
 }
 
 .header .container {
@@ -132,7 +133,6 @@ a {
   font-size: 55px;
   color: #fff;
   font-weight: 900;
-  line-height: 65px;
 }
 
 .header .container .header-content__text h4 {
@@ -279,12 +279,9 @@ a {
   width: 100%;
 }
 
-.info .container {
-  margin: 0 auto;
-  width: 100%;
-}
 
-.info .container .info-items {
+
+.info .info-items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -293,7 +290,7 @@ a {
   width: 100%;
 }
 
-.info .container .info-items .info-items__item-1 {
+.info .info-items .info-items__item-1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -308,17 +305,17 @@ a {
   background-color: #80d8ff;
 }
 
-.info .container .info-items .info-items__item-1 img {
+.info .info-items .info-items__item-1 img {
   margin-left: 60px;
 }
 
-.info .container .info-items .info-items__item-1 p {
+.info .info-items .info-items__item-1 p {
   margin-left: 10px;
   color: #fff;
   font-weight: 800;
 }
 
-.info .container .info-items .info-items__item-2 {
+.info .info-items .info-items__item-2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -333,17 +330,17 @@ a {
   background-color: #82b1ff;
 }
 
-.info .container .info-items .info-items__item-2 img {
+.info .info-items .info-items__item-2 img {
   margin-left: 60px;
 }
 
-.info .container .info-items .info-items__item-2 p {
+.info .info-items .info-items__item-2 p {
   margin-left: 10px;
   color: #fff;
   font-weight: 800;
 }
 
-.info .container .info-items .info-items__item-3 {
+.info .info-items .info-items__item-3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -358,17 +355,17 @@ a {
   background-color: #b388ff;
 }
 
-.info .container .info-items .info-items__item-3 img {
+.info .info-items .info-items__item-3 img {
   margin-left: 60px;
 }
 
-.info .container .info-items .info-items__item-3 p {
+.info .info-items .info-items__item-3 p {
   margin-left: 10px;
   color: #fff;
   font-weight: 800;
 }
 
-.info .container .info-items .info-items__item-4 {
+.info .info-items .info-items__item-4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -383,11 +380,11 @@ a {
   background-color: #ea80fc;
 }
 
-.info .container .info-items .info-items__item-4 img {
+.info .info-items .info-items__item-4 img {
   margin-left: 60px;
 }
 
-.info .container .info-items .info-items__item-4 p {
+.info .info-items .info-items__item-4 p {
   margin-left: 10px;
   color: #fff;
   font-weight: 800;
@@ -520,6 +517,105 @@ a {
   padding: 10px;
 }
 
+.customers{
+  margin: 50px 0;
+  width: 100%;
+  min-height: 560px;
+  background: url('../img/bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.container{
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+.customers__wrap{
+  width: 100%;
+  min-height: 560px; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 40px;
+}
+.customers__text{
+  width: 47%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.customers__text-title{
+  font-weight: 600;
+  font-size: 28px;
+  color: #fff;
+  padding-bottom: 15px;
+}
+.customers__text-descr{
+  font-weight: 600;
+  font-size: 15px;
+  color: #fff;
+  line-height: 25px;
+  padding-bottom: 70px;
+}
+.customers__btn a{
+  text-transform: uppercase;
+  padding: 20px 25px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  background-color: #061e37;
+  font-weight: 700;
+  -webkit-box-shadow: 0px 5px 5px 0px black;
+          box-shadow: 0px 5px 5px 0px black;
+  margin-bottom: 70px;
+}
+.customers__btn a:hover{
+  background-color: #fff;
+  color: #061e37;
+  transition: 0.5s;
+}
+.customers__slider{
+  width: 47%;
+  display: block;
+}
+.slider__item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+}
+.photo{
+  margin-right: 15px;
+}
+.custom-text{
+  padding: 15px 30px 15px 15px;
+  background-color: #fff;
+  border-radius: 5px;
+  background-color: rgb( 255, 255, 255 );
+  box-shadow: 0px 5px 10px 0px rgb( 0, 0, 0 );
+}
+.custom-text h4{
+  font-size: 18px;
+  font-weight: bold;
+  color: #061e37;
+  padding-bottom: 10px;
+}
+.custom-text p{
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  color: #78909c;
+  font-style: italic;
+}
+
+
+
+
+
+
 @media screen and (max-width: 968px) {
   .header-content {
     display: -webkit-box;
@@ -533,7 +629,8 @@ a {
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
-    height: auto;
+    width: 100%;
+    padding-top: 30px;
     
   }
   .fa-bars{
@@ -546,30 +643,48 @@ a {
   .header-content__video{
     width: 100%!important;
   }
-  .info .container .info-items .info-items__item-1,
-  .info .container .info-items .info-items__item-2,
-  .info .container .info-items .info-items__item-3,
-  .info .container .info-items .info-items__item-4 {
+  .info-items__item-1,
+  .info-items__item-2,
+  .info-items__item-3,
+  .info-items__item-4 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 50%;
+    width: 50%!important;
   }
   .header .container .nav .menu{
     display: none;
+  }
+  .customers__wrap{
+    display: flex;
+    flex-direction: column
+  } 
+  .customers__text{
+    padding-top: 50px;
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .customers__slider{
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 
-}
+
 @media screen and (max-width: 480px){
+  .header-content__text{
+    width: 100%!important;
+  }
   .header .container .nav .menu{
     display: none;
   }
-  .info .container .info-items .info-items__item-1,
-  .info .container .info-items .info-items__item-2,
-  .info .container .info-items .info-items__item-3,
-  .info .container .info-items .info-items__item-4{
-    width: 100%;
-    height: 80px;
+  .info-items__item-1,
+  .info-items__item-2,
+  .info-items__item-3,
+  .info-items__item-4{
+    width: 100%!important;
+    height: 80px!important;
   }
   .easy-items{
     -webkit-flex-direction: column;
@@ -586,7 +701,7 @@ a {
   }
   .header-content__text,
   .header-content__video {
-    width: 80%!important;
+    width: 100%!important;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -624,4 +739,12 @@ a {
     color: #fff;
     font-size: 20px;
     cursor: pointer;
+  }
+  .customers__text h2{
+    font-size: 35px;
+  }
+  .photo{
+    display: none;
+  }
+  
 }
